quick fix for overflow info

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -38,6 +38,7 @@ body, html
 
 iframe
 	box-shadow: 0px 0px 3px grey
+	margin: 0px 25px 25px 25px
 
 .article
 	padding-bottom: 25px
